@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html>
 <head>
   <meta name="keywords" content="WebDAV CGI wrapper UID" />
   <meta name="author" content="Daniel Rohde" />
@@ -76,7 +76,7 @@ Overview of existing page template hooks (template file name pattern: <code>temp
 <pre>
 &lt;li&gt;&lt;a class="help-button" target="_blank" href="link_to_my_help" accesskey="6"&gt;Help&lt;/a&gt;&lt;/li&gt;
 &lt;li&gt;&lt;a class="logout-button" href="/logout"&gt;Logout&lt;/a>&lt;/li&gt;
-&lt;li&gt;&lt;a class="contact-button" href="mailto:contact@mydomain.org?subject=WebDAV CGI" accesskey="9"&gt;Contact&lt;/a>&lt;/li&gt;
+&lt;li&gt;&lt;a class="contact-button" href="mailto:contact@mydomain.org?subject=WebDAV%20CGI" accesskey="9"&gt;Contact&lt;/a>&lt;/li&gt;
 </pre>
 </li>
 </ol>
@@ -163,10 +163,10 @@ Consider this if you integrate a WYSIWYG editor:
 <li>Open the Web console and/or the error console of your Web browser. </li>
 <li>Use the <a target="_blank" href="http://validator.w3.org/">W3C<sup>&reg;</sup> Markup Validation Service</a> to check the HTML output.</li>
 <li>Use the <a target="_blank" href="http://jigsaw.w3.org/css-validator/">W3C<sup>&reg;</sup> CSS Validation Servcie</a> to check your CSS styles.</li>
-<li><a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV CGI - Simple View Trouble">Ask the author</a></li>
+<li><a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV%20CGI%20-%20Simple%20View%20Trouble">Ask the author</a></li>
 </ol>
 <div id="contact">
-&copy; ZE CMS, Humboldt-Universit&auml;t zu Berlin | Written 2011-2013 by <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV CGI">Daniel Rohde</a> </div>
+&copy; ZE CMS, Humboldt-Universit&auml;t zu Berlin | Written 2011-2013 by <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV%20CGI">Daniel Rohde</a> </div>
 </div>
 </body>
 </html>
