@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html>
 <head>
   <meta name="keywords" content="WebDAV CGI wrapper UID" />
   <meta name="author" content="Daniel Rohde" />
@@ -64,12 +64,12 @@ You do not need mod_dav for the Apache Web server. WebDAV CGI replaces mod_dav c
     <li>CGI (included in most Linux dists; older dists need that: libcgi-perl)</li>
     <li>DBI (libdbi-perl) and a database driver, e.g. DBD::SQLite (libdbd-sqlite3-perl) - (since v0.3.0)</li>
     <li>Date::Parse (libtimedate-perl) - (since v0.2.1)</li>
-    <li><strike>OSSP::uuid (libossp-uuid-perl or from <a href="http://www.ossp.org/pkg/lib/uuid/">http://www.ossp.org/pkg/lib/uuid/</a>) - (since v0.3.0)</strike> (since v0.8.0 replaced by UUID::Tiny)</li>
+    <li><del>OSSP::uuid (libossp-uuid-perl or from <a href="http://www.ossp.org/pkg/lib/uuid/">http://www.ossp.org/pkg/lib/uuid/</a>) - (since v0.3.0)</del> (since v0.8.0 replaced by UUID::Tiny)</li>
     <li>UUID::Tiny (libuuid-tiny-perl) - (since 0.8.0)</li>
     <li>XML::Simple (libxml-simple-perl)</li>
     <li>Quota (libquota-perl) - (since v0.3.4)</li>
     <li>Archive::Zip (libarchive-zip-perl) - (since v0.5.0)</li>
-    <li><strike>Image::Magick (perlmagick) - (since v0.5.1)</strike> (since v0.5.3 replaced by Graphics::Magick)</li>
+    <li><del>Image::Magick (perlmagick) - (since v0.5.1)</del> (since v0.5.3 replaced by Graphics::Magick)</li>
     <li>Graphics::Magick (libgraphics-magick-perl or <a href="http://www.graphicsmagick.org/perl.html">http://www.graphicsmagick.org/perl.html</a>) - (since v0.5.3)</li>
     <li>File::Spec::Link (libfile-copy-link-perl) - (since v0.5.2)</li>
     <li>IO::Compress::Gzip (included in most Linux dists) - (since v0.7.0)</li>
@@ -547,7 +547,7 @@ Copy the <code>locale/webdav-ui_default.msg</code> to <code>locale/webdav-ui_&lt
 
 </div>
 <div>
-And don't forget to sent <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV CGI">me</a> your translation. Thanx :-)
+And don't forget to sent <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV%20CGI">me</a> your translation. Thanx :-)
 </div>
 
 <h3>How to change CSS styles</h3>
@@ -1239,7 +1239,6 @@ RewriteRule ^/ /webdavcgi [PT,L,E=WEBDAVCONF:/etc/webdav.conf, \
                                 E=PERLLIB:/etc/webdavcgi/lib/perl, \
                                 E=TICKET_LIFETIME:21600]
 </pre>
-</li>
     	<br/>The ticket (renewal) lifetime depends on your domain controller setup (Kerberos policy of your domain group policy). You can check it (Debian/Ubuntu: <code>apt-get install krb5-user</code>):
 <pre>
 kinit mydomainaccount@MY.EXAMPLE.DOMAIN.ORG
@@ -1263,7 +1262,9 @@ Notes:
 <ul>
 <li>If you change your <code>/etc/webdav.conf</code> you have to touch webdav.pl (<code>touch&nbsp;cgi-bin/webdav.pl</code>) or kill all speedy processes (<code>pkill&nbsp;-f&nbsp;speedy_backend</code>) because Speedy checks only the modification time of webdav.pl.</li>
 <li>If you do not use a setuid/setgid wrapper you have to use a single database for all users.</li>
-<li>You can increase the performance if you enable persistent database connections in your <code>/etc/webdav.conf</code>: <code>$DBI_PERSISTENT = 1;</code></li>
+<li>You can increase the performance if you enable persistent database connections in your <code>/etc/webdav.conf</code>: <code>$DBI_PERSISTENT = 1;</code></li> 
+<li>If you run multiple WebDAV CGI instances on a single server with different setups and databases you have to separate the Speedy instances. This can be done with a additional rewrite option: 
+<code>E=SPEEDY_TMPBASE:myprojecttmpbase</code> (replace <code>myprojecttmpbase</code> with a unique name for a WebDAV CGI instances) </li>
 </ul>
 
 </div>
@@ -1384,7 +1385,7 @@ Content-Type: text/plain
 404 Not Found - your wrapper
 </pre>
 </li>
-<li> <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV CGI">Contact the author</a></li>
+<li> <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV%20CGI">Contact the author</a></li>
 </ol>
 <h3>FreeBSD/OpenBSD: all LOCK requests result in a segmentation fault error (signal 11)</h3>
 In some installations OSSP::uuid module lets Perl crashing with a segmentation fault. A solution is to replace OSSP::uuid with UUID::Tiny (thx Tony Wijnhard):
@@ -1455,9 +1456,11 @@ see <a href="https://bugzilla.redhat.com/show_bug.cgi?id=527143#c2">https://bugz
 <li> SELinux users should define a policy to allow the execution of webdavwrapper.</li>
 </ul>
 </div>
-
+<h3>Speedy problems with different WebDAV CGI instances on a single server</h3>
+If you run multiple WebDAV CGI instances on a single server with different setups and databases you have to separate the Speedy instances. This can be done with a additional rewrite option: 
+<code>E=SPEEDY_TMPBASE:myprojecttmpbase</code> (replace <code>myprojecttmpbase</code> with a unique name for a WebDAV CGI instances)
 <div id="contact">
-&copy; ZE CMS, Humboldt-Universit&auml;t zu Berlin | Written 2011-2012 by <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV CGI">Daniel Rohde</a> </div>
+&copy; ZE CMS, Humboldt-Universit&auml;t zu Berlin | Written 2011-2012 by <a href="mailto:d.rohde@cms.hu-berlin.de?subject=WebDAV%20CGI">Daniel Rohde</a> </div>
 </div>
 </body>
 </html>
